--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hello World
+Hello everyone. Thank you for visiting my github page. My name is Kamal Pangeni and currently I am working as Senior Data Scientist at CVS Health, I leverage my PhD in Physics and my expertise in Machine Learning, Deep Neural Networks, and Data Analysis to create innovative solutions for complex healthcare challenges. I have over 5 years of experience in developing and deploying predictive models, interactive dashboards, and custom visualizations for various business and clinical use cases.
+
+My passion is to use data and analytics to drive operational efficiency, profitability, and quality of patient care. I enjoy collaborating with cross-functional teams, stakeholders, and end-users to understand their needs, provide insights, and deliver value. I am always eager to learn new skills, tools, and technologies to enhance my capabilities and expand my knowledge.
