added styles file

--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
+<!doctype html>
 <html lang='en'>
 <head>
 	<meta charset = "UTF-8">
-	<meta name="viewport" content = "width = device-width, initial-scale=1.0">
-	<title> Document</title>
+	<meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<title> Kamal Pangeni</title>
+
+	<link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    
 </head>
 <body>
-<h1>Introduction</h1>	 
+	<div class="wrapper">
+
+		<header>
+			<img src="images/mypic2019.jpg" width="80%" height="80%"> 
+			<a href="index.html"><button class="button">Home</button></a>
+	        <br>
+	        <a href="publications.html"><button class="button">Publications</button></a>
+	        <br>
+	        <a href="research.html"><button class="button">Research</button></a>
+	      
+		</header>
+<section>
+	<h2> From Physics to Data Science and Machine Learning ...</h2>	 
 <p>
- Hello everyone. Thank you for visiting my github page. My name is Kamal Pangeni and currently I am working as Senior Data Scientist at CVS Health, I leverage my PhD in Physics and my expertise in Machine Learning, Deep Neural Networks, and Data Analysis to create innovative solutions for complex healthcare challenges. I have over 5 years of experience in developing and deploying predictive models, interactive dashboards, and custom visualizations for various business and clinical use cases.
-
 My passion is to use data and analytics to drive operational efficiency, profitability, and quality of patient care. I enjoy collaborating with cross-functional teams, stakeholders, and end-users to understand their needs, provide insights, and deliver value. I am always eager to learn new skills, tools, and technologies to enhance my capabilities and expand my knowledge.
+</p>
 
+<h2>Brief Bio:</h2>
+
+        <p>I am currently working as Senior Data Scientist at CVS Health, I leverage my PhD in Physics and my expertise in Machine Learning, Deep Neural Networks, and Data Analysis to create innovative solutions for complex healthcare challenges. I have over 5 years of experience in developing and deploying predictive models, interactive dashboards, and custom visualizations for various business and clinical use cases.</p>
+
+        <p>I did my doctoral reserach in theoretical
+        physics from Washington University in St. Louis where I worked with
+        Prof.
+        <a href="https://academictree.org/physics/tree.php?pid=437524">
+            Michael Ogilive</a>
+        and Prof.
+        <a = href="https://academictree.org/physics/tree.php?pid=393111">
+            Mark  Alford</a>.
+        I did my undergraduate studies in Physics and Mathematics from Brigham Young University in Provo, UT.
+        </p>
+</section>
+	</div>
+<script src="javascripts/scale.fix.js"></script>
 </body>
 </html>
