--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="wrapper">
 
 		<header>
-			<img src="images/mypic2019.jpg" width="80%" height="80%"> 
+			<img src="images/myimg2019.JPG" width="80%" height="80%"> 
 			<a href="index.html"><button class="button">Home</button></a>
 	        <br>
 	        <a href="publications.html"><button class="button">Publications</button></a>
