added new sections

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	        <br>
 	        <a href="publications.html"><button class="button">Publications</button></a>
 	        <br>
-	        <a href="research.html"><button class="button">Research</button></a>
+	        <a href="docs/Kamal_Resume_CV.pdf" target="_blank"><button class="button">CV/Resume</button></a>
 	      
 		</header>
 <section>
@@ -43,6 +43,13 @@ My passion is to use data and analytics to drive operational efficiency, profita
             Mark  Alford</a>.
         I did my undergraduate studies in Physics and Mathematics from Brigham Young University in Provo, UT.
         </p>
+        <hr>
+        <section>
+          <p><small>Adapted from the
+             <a href="https://github.com/orderedlist/minimal">minimal theme</a>
+             by <a href="https://github.com/orderedlist">orderedlist</a>.
+          </small></p>
+        </section>
 </section>
 	</div>
 <script src="javascripts/scale.fix.js"></script>
