added new image

--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
 
         <header>
-            <img src="images/myimg2019.JPG" width="80%" height="80%"> 
+            <img src="images/myimg2022.png" width="80%" height="80%"> 
             <br>
             <a href="index.html"><button class="button">Home</button></a>
             <br>
