--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 </head>
 <body>
 	<div class="wrapper">
-
 		<header>
-			<img src="images/myimg2019.JPG" width="80%" height="80%"> 
+			<img src="images/myimg2022.png" width="80%" height="80%",alt="Avatar"> 
 			<br>
 			<a href="index.html"><button class="button">Home</button></a>
 	        <br>
