--- a/index.html
+++ b/index.html
@@ -8,41 +8,78 @@
 	<link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
-    
 </head>
-<body>
-	<div class="wrapper">
+<div class="wrapper">
+<body style="background-color:powderblue;">
 		<header>
-			<img src="images/myimg2022.png" width="80%" height="80%",alt="Avatar"> 
+      <h1>Kamal Pangeni, Ph.D.<h1>
+      <br>
+			<img src="images/myimg2022.png" width="100%" height="100%",alt="Avatar"> 
 			<br>
-			<a href="index.html"><button class="button">Home</button></a>
-	        <br>
-	        <a href="publications.html"><button class="button">Publications</button></a>
-	        <br>
-	        <a href="docs/Kamal_Resume_CV.pdf" target="_blank"><button class="button">CV/Resume</button></a>
-	      
+            <br>
+            <div>
+                <a href="index.html"><button class="button" style="width: 100%;">Home</button></a>
+                <br>
+                <a href="myinterests.html"><button class="button" style="width: 100%;">Interest</button></a>
+                <br>
+                <a href="publications.html"><button class="button" style="width: 100%;">Publications</button></a>
+                <br>
+                <a href="docs/Kamal_Resume_CV.pdf" target="_blank" ><button class="button" style="width: 100%;">CV/Resume</button></a>
+            </div>
+      <br>
+      <h2> Get in Touch </h2> 
+      <span>[firstname][lastname][at]gmail.com</span>
+      <br>
+      <a href="https://www.linkedin.com/in/kamal-pangeni-31242a29/" target="_blank">Linkedin</a>
+      <br>
+      <a href="https://github.com/kamalpangeni" target="_blank">GitHub</a>
 		</header>
+
 <section>
-	<h2> From Physics to Data Science and Machine Learning ...</h2>	 
-<p>
-My passion is to use data and analytics to drive operational efficiency, profitability, and quality of patient care. I enjoy collaborating with cross-functional teams, stakeholders, and end-users to understand their needs, provide insights, and deliver value. I am always eager to learn new skills, tools, and technologies to enhance my capabilities and expand my knowledge.
-</p>
-
-<h2>Brief Bio:</h2>
-
-        <p>I am currently working as Senior Data Scientist at CVS Health, I leverage my PhD in Physics and my expertise in Machine Learning, Deep Neural Networks, and Data Analysis to create innovative solutions for complex healthcare challenges. I have over 5 years of experience in developing and deploying predictive models, interactive dashboards, and custom visualizations for various business and clinical use cases.</p>
-
-        <p>I did my doctoral reserach in theoretical
-        physics from Washington University in St. Louis where I worked with
-        Prof.
-        <a href="https://academictree.org/physics/tree.php?pid=437524">
+	<h2> About Me </h2>	 
+        <p>
+	Hi there, thank you for visiting my page. My name is Kamal Pangeni. I am a data scientist with 6+ years of industry experience in data mining, perdictive analytics, and machine learning. My interest is in leveraging cutting edge ML/AI technologies to enhance, augment, and automate company-wide decision making process. Before starting my industy journey, I obtained my doctoral degree in theoretical physics.
+        </p>
+    <h2> Brief Bio </h2>	
+      <p>
+        I was born and raised in Nepal. I moved to the United States in 2007 for my undergraduate studies. I did my undergraduate studies in Physics and Mathematics from <a href="https://www.byu.edu/" target="blank">Brigham Young University </a> in Provo, UT. I then joined <a href = "https://wustl.edu/" target ="_blank"> Washington University in St. Louis </a> to get my Phd in theoretical physics where I worked with with Prof.
+        <a href="https://artsci.wustl.edu/faculty-staff/michael-c-ogilvie" target="_blank">
             Michael Ogilive</a>
         and Prof.
-        <a = href="https://academictree.org/physics/tree.php?pid=393111">
-            Mark  Alford</a>.
-        I did my undergraduate studies in Physics and Mathematics from Brigham Young University in Provo, UT.
+        <a href="https://physics.wustl.edu/people/mark-g-alford" target="_blank">
+            Mark  Alford</a>. My doctoral reserach was in the intersection of finite density QCD and nuclear physics.
         </p>
-        <hr>
+        <p> 
+        After my phd, I transitioned into Machine Learning and Data Science. I joined Mercy Hospital in St. Louis as Machine Learning Data Scientist. In 2021 I moved to CVS Health as Senior Data Scientist.
+        </p>
+        <br>
+        <h2>Work Experience</h2>
+        <table>
+          <tbody>
+          <tr>
+            <td>2021-</td>
+            <td>Senior Data Scientist, CVS Health</td>
+          </tr>
+          <tr>
+            <td>2018-21</td>
+            <td> Data Scientist-ML, Mercy</td>
+          </tr>
+        </tbody>
+        </table>
+        <br>
+        <h2>Education</h2>
+        <table>
+          <tbody>
+          <tr>
+            <td>2011-17</td>
+            <td>PhD, Physics, Washington University in St. Louis</td>
+          </tr>
+          <tr>
+            <td>2007-11</td>
+            <td>BSc., Physics and Mathematics, Brigham Young University</td>
+          </tr>
+        </tbody>
+        </table>
         <section>
           <p><small>Adapted from the
              <a href="https://github.com/orderedlist/minimal">minimal theme</a>
