--- a/publications.html
+++ b/publications.html
@@ -10,29 +10,34 @@
     <meta name="viewport" content="width=device-width">
     
 </head>
-<body>
-    <div class="wrapper">
-
+<div class="wrapper">
+<body style="background-color:powderblue;">
         <header>
-            <img src="images/myimg2022.png" width="80%" height="80%"> 
+      <h1>Kamal Pangeni, Ph.D.<h1>
+      <br>
+            <img src="images/myimg2022.png" width="100%" height="100%",alt="Avatar"> 
             <br>
-            <a href="index.html"><button class="button">Home</button></a>
             <br>
-            <a href="publications.html"><button class="button">Publications</button></a>
-            <br>
-            <a href="docs/Kamal_Resume_CV.pdf" target="_blank"><button class="button">CV/Resume</button></a>
-          
+            <div>
+                <a href="index.html"><button class="button" style="width: 100%;">Home</button></a>
+                <br>
+                <a href="myinterests.html"><button class="button" style="width: 100%;">Interest</button></a>
+                <br>
+                <a href="publications.html"><button class="button" style="width: 100%;">Publications</button></a>
+                <br>
+                <a href="docs/Kamal_Resume_CV.pdf" target="_blank" ><button class="button" style="width: 100%;">CV/Resume</button></a>
+            </div>
         </header>
 
       <section>
         <h2>Links to my Publications:</h2>
 
         <p>
-        <a href=https://inspirehep.net/authors/1645552>INSPIRE HEP</a>
+        <a href=https://inspirehep.net/authors/1645552 target="_blank">INSPIRE HEP</a>
         |
-        <a href="https://arxiv.org/search/?searchtype=author&query=Pangeni%2C+K">arXiv</a>
+        <a href="https://arxiv.org/search/?searchtype=author&query=Pangeni%2C+K" target="_blank">arXiv</a>
         |
-        <a href="https://scholar.google.com/citations?user=MJPS73gAAAAJ&hl=en&oi=ao">Google Scholar</a>
+        <a href="https://scholar.google.com/citations?user=MJPS73gAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
         </p>
 
         <hr>
@@ -43,10 +48,50 @@
         <br>
          Mark G. Alford, Kamal Pangeni, and Andreas Windisch
         <br>
-        <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.120.082701">
-            Phys. Rev. Lett. 120, 082701</a>
+        <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.120.082701" target="_blank">
+            Phys. Rev. Lett. 120, 082701 (2018)</a>
+        </p>
+        <p>
+        Liquid-gas phase transitions and CK symmetry in quantum field theories
+        <br>
+         Hiromichi Nishimura, Michael C. Ogilvie, and Kamal Pangeni
+        <br>
+        <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.95.076003" target="_blank">
+            Phys. Rev. D 95, 076003 (2017)</a>
+        </p>
+        <p>
+        Gap-bridging enhancement of modified Urca process in nuclear matter
+        <br>
+         Mark G. Alford and Kamal Pangeni
+        <br>
+        <a href="https://journals.aps.org/prc/abstract/10.1103/PhysRevC.95.015802" target="_blank">
+            Phys. Rev. C 95, 015802 (2017)</a>
+        </p>
+        <p>
+        Complex spectrum of finite-density lattice QCD with static quarks at strong coupling
+        <br>
+         Hiromichi Nishimura, Michael Ogilvie, and Kamal Pangeni
+        <br>
+        <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.93.094501" target="_blank">
+            Phys. Rev. D 93, 094501 (2016)</a>
+        </p>
+        <p>
+        Complex saddle points and disorder lines in QCD at finite temperature and density
+        <br>
+         Hiromichi Nishimura, Michael Ogilvie, and Kamal Pangeni
+        <br>
+        <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.91.054004" target="_blank">
+            Phys. Rev. D 91, 054004 (2015)</a>
         </p>
 
+        <p>
+        Complex saddle points in QCD at finite temperature and density
+        <br>
+         Hiromichi Nishimura, Michael Ogilvie, and Kamal Pangeni
+        <br>
+        <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.90.045039" target="_blank">
+            Phys. Rev. D 90, 045039 (2014)</a>
+        </p>
         <br>
         <hr>
         <section>
